[gd_scene load_steps=4 format=3 uid="uid://cqw1w7860ijxl"]

[ext_resource type="AudioStream" uid="uid://dcgia7k0jsau3" path="res://sounds2/button_click.wav" id="1_wq5mr"]
[ext_resource type="Script" uid="uid://ct5aylqlq8bq" path="res://main_selection.gd" id="1_wsrww"]
[ext_resource type="AudioStream" uid="uid://f00gtib0hggv" path="res://sounds2/game_music.wav" id="2_wsrww"]

[node name="MainSelection" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1176.0
offset_bottom = 664.0
script = ExtResource("1_wsrww")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -64.0
offset_top = -24.0
offset_right = 1424.0
offset_bottom = 712.0
color = Color(0.10756382, 1.5030378e-07, 7.422409e-08, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 200.0
offset_right = 838.0
offset_bottom = 440.0

[node name="Spacer" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_wq5mr")

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_wsrww")

[node name="WorldHardestButton" type="Button" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 296.0
offset_right = 852.0
offset_bottom = 341.0
text = "WORLD'S HARDEST GAME"

[node name="MemoryButton" type="Button" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 240.0
offset_right = 852.0
offset_bottom = 285.0
text = "MEMORY GAME"

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 128.0
offset_right = 847.0
offset_bottom = 224.0
theme_override_font_sizes/font_size = 48
text = "CHOOSE YOUR GAME!"
